Open all modules to avoid illegal reflective access warnings